--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/env": "^15.5.3",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
